v1.6.0/_sources/lcls-twincat-motion_Library_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 
      -
    * - Target IP address
      - 
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _Library_pragmas:

Pragmas
-------

Total pragmas found: 133
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, Unset
        PMPS, SLAC - LCLS, Unset, Unset
        Tc2_EtherCAT, Beckhoff Automation GmbH, Unset, Unset
        Tc2_MC2, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_JsonXml, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4437664 (32)


BasicTests
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>17 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        BasicTests.bError, BOOL, 8879192 (8)
        BasicTests.errState, MC_AxisStates, 8879200 (16)
        BasicTests.fbMotion, FB_MotionStageSim, 8905664 (171328)
        BasicTests.fbMotion.fbMotionStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 8908480 (2048)
        BasicTests.fbMotion.fbMotionStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 8907456 (1024)
        BasicTests.fbRequest, FB_MotionRequest, 9076992 (1920)
        BasicTests.Motor, DUT_MotionStage, 8884608 (21056)
        BasicTests.Motor.Axis.NcToPlc, NCTOPLC_AXIS_REF, 8885696 (2048)
        BasicTests.Motor.Axis.PlcToNc, PLCTONC_AXIS_REF, 8884672 (1024)
        BasicTests.Motor.bBrakeRelease, BOOL, 8893656 (8)
        BasicTests.Motor.bHardwareEnable, BOOL, 8893664 (8)
        BasicTests.Motor.bHome, BOOL, 8893648 (8)
        BasicTests.Motor.bLimitBackwardEnable, BOOL, 8893640 (8)
        BasicTests.Motor.bLimitForwardEnable, BOOL, 8893632 (8)
        BasicTests.Motor.nRawEncoderINT, INT, 8893776 (16)
        BasicTests.Motor.nRawEncoderUINT, UINT, 8893760 (16)
        BasicTests.Motor.nRawEncoderULINT, ULINT, 8893696 (64)

.. raw:: html

   </details>
   <br />


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 9085288 (8)
        Constants.bLittleEndian, BOOL, 9085144 (8)
        Constants.bSimulationMode, BOOL, 9085280 (8)
        Constants.CompilerVersion, VERSION, 9085216 (64)
        Constants.CompilerVersionNumeric, DWORD, 9085376 (32)
        Constants.nPackMode, UINT, 9085312 (16)
        Constants.nRegisterSize, WORD, 9085296 (16)
        Constants.RuntimeVersion, VERSION, 9085152 (64)
        Constants.RuntimeVersionNumeric, DWORD, 9085344 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nHomingError, UDINT, 9085088 (32)
        GVL.nLangId_OnlineMonitoring, DINT, 4438048 (32)


GVL_ErrorSystem
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_ErrorSystem.cSizeOfErrorData, UINT, 9085120 (16)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4438400 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097216 (130240)
        GVL_Logger.iLogPort, UINT, 4096096 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4227456 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096416 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096112 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4227488 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096448 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096480 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096512 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097184 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.MaxNumberOfAsserts, UINT, 4438832 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4438816 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4436912 (16)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsLogger, FB_ADSLogStringMessageFifoQueue, 4473792 (4129152)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 4439680 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 4439616 (64)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4441728 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4441744 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4438848 (768)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 4441792 (32000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4436904 (8)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4437696 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4437824 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4435184 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4437856 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>217 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4229184 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4229088 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4229120 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4228960 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4229056 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4228896 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4229152 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4228928 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4228992 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4229024 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4228768 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4228544 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4228672 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4228736 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4228640 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4228800 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4228832 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4228608 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4228576 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4228704 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4228480 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4228864 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4228448 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4228512 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4229216 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4229248 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4230304 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4230240 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4230336 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4230368 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4230400 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4230432 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4230272 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4228336 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4228272 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4228400 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4228112 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4228384 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4228144 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4228096 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4228224 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4228416 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4228240 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4228256 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4228352 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4228128 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4228320 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4228176 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4228208 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4228288 (16)
        Global_Variables.ADSSTATE_START, UINT, 4228160 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4228192 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4228368 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4228304 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4296128 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4296160 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4296192 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4227808 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4097168 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4228032 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4228048 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4227920 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4227840 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4227904 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4227936 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4227856 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4227872 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4227888 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4227952 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4227968 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4227984 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4228000 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4228016 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4227824 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4228080 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4228064 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4230464 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4228440 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097160 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4228432 (8)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4303840 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4309152 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4315424 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4315392 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4315360 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4315456 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4231136 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 8618688 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4294872 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4232896 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4315504 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4315512 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 8618624 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4296768 (128)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4437352 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4437056 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4436928 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4294880 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4231120 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4296240 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4296224 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4296256 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4296272 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4296288 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4296608 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4296384 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4296704 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4296480 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4296672 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4296736 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4296320 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4296352 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4296544 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4296448 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4296576 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4296640 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4296512 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4296416 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4230560 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4230624 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4230592 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4230496 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4230656 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4230528 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4297152 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4296896 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4296208 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4232864 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4232744 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4232832 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4232848 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4296096 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4294560 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4294592 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4294464 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4294432 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4294400 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4232752 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4294624 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4232912 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4294848 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4232904 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4294864 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4231232 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4294856 (8)
        Global_Variables.nWatchdogTime, BYTE, 4230488 (8)
        Global_Variables.PI, LREAL, 4231168 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4294784 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4294816 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4294752 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4294656 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4230048 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4229408 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4229376 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4294688 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4294720 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4229472 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4229792 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4229760 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4296064 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4229632 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4229440 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4229728 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4229664 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4229504 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4229824 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4229696 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4229568 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4229600 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4229536 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4294496 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4294528 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4229856 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4229280 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4229312 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4229344 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4229920 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4229888 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4229952 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4230016 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4229984 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4230472 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4230480 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4303776 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4304128 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4303712 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4304064 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4303488 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4302640 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4303024 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4303648 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4304000 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4303520 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4303872 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4303584 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4303936 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4231104 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4231088 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4230992 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4230928 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4230944 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4230960 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4230912 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4230976 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4231056 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4231008 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4231040 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4231072 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4231024 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 8611520 (7104)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4230176 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4230080 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4230144 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4230112 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4230208 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4304192 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_lcls_twincat_motion, ST_LibVersion, 9084800 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 8611200 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4227520 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4232448 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4438112 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4438528 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4231776 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 8602944 (288)


Interactive
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>28 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Interactive.bGoHCF, BOOL, 8879184 (8)
        Interactive.bGoIn, BOOL, 8879168 (8)
        Interactive.bGoOut, BOOL, 8611504 (8)
        Interactive.bHCF, BOOL, 8879176 (8)
        Interactive.bIn, BOOL, 8611512 (8)
        Interactive.bInit, BOOL, 8609488 (8)
        Interactive.bOut, BOOL, 8609496 (8)
        Interactive.fbGoBad, FB_PositionStateMove, 8881664 (2944)
        Interactive.fbGoIn, FB_PositionStateMove, 8876224 (2944)
        Interactive.fbGoOut, FB_PositionStateMove, 8870848 (2944)
        Interactive.fbMotionStageSim, FB_MotionStageSim, 8697088 (171328)
        Interactive.fbMotionStageSim.fbMotionStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 8699904 (2048)
        Interactive.fbMotionStageSim.fbMotionStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 8698880 (1024)
        Interactive.M1, DUT_MotionStage, 8676032 (21056)
        Interactive.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 8677120 (2048)
        Interactive.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 8676096 (1024)
        Interactive.M1.bBrakeRelease, BOOL, 8685080 (8)
        Interactive.M1.bHardwareEnable, BOOL, 8685088 (8)
        Interactive.M1.bHome, BOOL, 8685072 (8)
        Interactive.M1.bLimitBackwardEnable, BOOL, 8685064 (8)
        Interactive.M1.bLimitForwardEnable, BOOL, 8685056 (8)
        Interactive.M1.nRawEncoderINT, INT, 8685200 (16)
        Interactive.M1.nRawEncoderUINT, UINT, 8685184 (16)
        Interactive.M1.nRawEncoderULINT, ULINT, 8685120 (64)
        Interactive.nCounter, UINT, 8611488 (16)
        Interactive.stIn, DUT_PositionState, 8873792 (2432)
        Interactive.stOut, DUT_PositionState, 8868416 (2432)
        Interactive.stUnsafe, DUT_PositionState, 8879232 (2432)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.MAX_STATES, INT, 8879216 (16)
        MOTION_GVL.stInvalidState, DUT_PositionState, 9082368 (2432)
        MOTION_GVL.stUnknownState, DUT_PositionState, 9079936 (2432)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>28 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 8608896 (16)
        PMPS_GVL.cnMaxStateArrayLen, INT, 8606448 (16)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 8606464 (1216)
        PMPS_GVL.cstSafeBeam, ST_BeamParams, 8607680 (1216)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 8608928 (512)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 8606176 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 8606336 (64)
        PMPS_GVL.fHiK_LUnd, LREAL, 8609728 (64)
        PMPS_GVL.fLowK_LUnd, LREAL, 8609664 (64)
        PMPS_GVL.fPeriod_mm_LUnd, LREAL, 8609600 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 8605664 (512)
        PMPS_GVL.g_areVBoundariesK, REAL, 8610304 (512)
        PMPS_GVL.g_areVBoundariesL, REAL, 8609792 (512)
        PMPS_GVL.g_cBoundaries, INT, 8609472 (16)
        PMPS_GVL.iHighBound_LUnd, UDINT, 8609536 (32)
        PMPS_GVL.iLowBound_LUnd, UDINT, 8609504 (32)
        PMPS_GVL.MAX_APERTURES, UINT, 8608912 (16)
        PMPS_GVL.MAX_ASSERTIONS, UDINT, 8609440 (32)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 8606400 (32)
        PMPS_GVL.MAX_FAST_FAULTS, DINT, 4441760 (32)
        PMPS_GVL.MAX_STOPPERS, UINT, 8606432 (16)
        PMPS_GVL.PERange, PE_Ranges, 8606208 (64)
        PMPS_GVL.reVHyst, REAL, 8609568 (32)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 8604448 (1216)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 8603232 (1216)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 8606272 (64)

.. raw:: html

   </details>
   <br />


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 8610816 (384)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4438080 (32)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 9459072 (960)


TwinCAT_LicenseInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_LicenseInfoVarList._LicenseInfo, PlcLicenseInfo, 9085408 (1024)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 9089600 (896)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 9086464 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 9088512 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 9089536 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 9086432 (32)


