v2.2.0/_sources/lcls-twincat-motion_Library_summary.rst.txt

Settings
--------

.. list-table::
    :header-rows: 1
    :align: center

    * - Setting
      - Value
      - Description
    * - AMS Net ID
      - 
      -
    * - Target IP address
      - 
      - Based on AMS Net ID by convention
    * - AMS Port
      - 851
      -

.. _Library_pragmas:

Pragmas
-------

Total pragmas found: 142
Total linter errors: 0



Libraries
---------

.. csv-table::
    :header: Library, Vendor, Default, Version
    :align: center

        LCLS General, SLAC, Unset, Unset
        PMPS, SLAC - LCLS, Unset, Unset
        Tc2_EtherCAT, Beckhoff Automation GmbH, Unset, Unset
        Tc2_MC2, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Standard, Beckhoff Automation GmbH, Unset, Unset
        Tc2_System, Beckhoff Automation GmbH, Unset, Unset
        Tc2_Utilities, Beckhoff Automation GmbH, Unset, Unset
        Tc3_JsonXml, Beckhoff Automation GmbH, Unset, Unset
        Tc3_Module, Beckhoff Automation GmbH, Unset, Unset

Symbols
-------





.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        .TCPADS_MAXUDP_BUFFSIZE, UDINT, 4395744 (32)


BasicTests
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>17 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        BasicTests.bError, BOOL, 635107272 (8)
        BasicTests.errState, MC_AxisStates, 635107280 (16)
        BasicTests.fbMotion, FB_MotionStageSim, 635132608 (327296)
        BasicTests.fbMotion.fbMotionStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 635135424 (2048)
        BasicTests.fbMotion.fbMotionStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 635134400 (1024)
        BasicTests.fbRequest, FB_MotionRequest, 635459904 (1920)
        BasicTests.Motor, DUT_MotionStage, 635107328 (25280)
        BasicTests.Motor.Axis.NcToPlc, NCTOPLC_AXIS_REF, 635108416 (2048)
        BasicTests.Motor.Axis.PlcToNc, PLCTONC_AXIS_REF, 635107392 (1024)
        BasicTests.Motor.bBrakeRelease, BOOL, 635116440 (8)
        BasicTests.Motor.bHardwareEnable, BOOL, 635116448 (8)
        BasicTests.Motor.bHome, BOOL, 635116432 (8)
        BasicTests.Motor.bLimitBackwardEnable, BOOL, 635116424 (8)
        BasicTests.Motor.bLimitForwardEnable, BOOL, 635116416 (8)
        BasicTests.Motor.nRawEncoderINT, INT, 635116560 (16)
        BasicTests.Motor.nRawEncoderUINT, UINT, 635116544 (16)
        BasicTests.Motor.nRawEncoderULINT, ULINT, 635116480 (64)

.. raw:: html

   </details>
   <br />


Constants
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Constants.bFPUSupport, BOOL, 636428424 (8)
        Constants.bLittleEndian, BOOL, 636428280 (8)
        Constants.bSimulationMode, BOOL, 636428416 (8)
        Constants.CompilerVersion, VERSION, 636428352 (64)
        Constants.CompilerVersionNumeric, DWORD, 636428512 (32)
        Constants.nPackMode, UINT, 636428448 (16)
        Constants.nRegisterSize, WORD, 636428432 (16)
        Constants.RuntimeVersion, VERSION, 636428288 (64)
        Constants.RuntimeVersionNumeric, DWORD, 636428480 (32)


DefaultGlobals
^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        DefaultGlobals.fTimeStamp, LREAL, 4096128 (64)
        DefaultGlobals.stSys, ST_System, 4096000 (88)


GeneralConstants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GeneralConstants.MAX_STATES, INT, 4096096 (16)


Global_Constants
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Constants.EMPTY_EVENT_CLASS, GUID, 4394880 (128)
        Global_Constants.EMPTY_EVENT_ID, UDINT, 4395008 (32)
        Global_Constants.EMPTY_SEVERITY, TcEventSeverity, 4395040 (16)
        Global_Constants.SUCCESS_EVENT, TcEventEntry, 4395072 (192)


Global_Variables
^^^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>217 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Variables.ADSIGRP_DEVICE_DATA, UDINT, 4185536 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARI, UDINT, 4185440 (32)
        Global_Variables.ADSIGRP_IOIMAGE_CLEARO, UDINT, 4185472 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RISIZE, UDINT, 4185312 (32)
        Global_Variables.ADSIGRP_IOIMAGE_ROSIZE, UDINT, 4185408 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIB, UDINT, 4185248 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIOB, UDINT, 4185504 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWIX, UDINT, 4185280 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOB, UDINT, 4185344 (32)
        Global_Variables.ADSIGRP_IOIMAGE_RWOX, UDINT, 4185376 (32)
        Global_Variables.ADSIGRP_SYM_DOWNLOAD, UDINT, 4185120 (32)
        Global_Variables.ADSIGRP_SYM_HNDBYNAME, UDINT, 4184896 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAME, UDINT, 4185024 (32)
        Global_Variables.ADSIGRP_SYM_INFOBYNAMEEX, UDINT, 4185088 (32)
        Global_Variables.ADSIGRP_SYM_RELEASEHND, UDINT, 4184992 (32)
        Global_Variables.ADSIGRP_SYM_UPLOAD, UDINT, 4185152 (32)
        Global_Variables.ADSIGRP_SYM_UPLOADINFO, UDINT, 4185184 (32)
        Global_Variables.ADSIGRP_SYM_VALBYHND, UDINT, 4184960 (32)
        Global_Variables.ADSIGRP_SYM_VALBYNAME, UDINT, 4184928 (32)
        Global_Variables.ADSIGRP_SYM_VERSION, UDINT, 4185056 (32)
        Global_Variables.ADSIGRP_SYMNAME, UDINT, 4184832 (32)
        Global_Variables.ADSIGRP_SYMNOTE, UDINT, 4185216 (32)
        Global_Variables.ADSIGRP_SYMTAB, UDINT, 4184800 (32)
        Global_Variables.ADSIGRP_SYMVAL, UDINT, 4184864 (32)
        Global_Variables.ADSIOFFS_DEVDATA_ADSSTATE, UDINT, 4185568 (32)
        Global_Variables.ADSIOFFS_DEVDATA_DEVSTATE, UDINT, 4185600 (32)
        Global_Variables.ADSLOG_MSGTYPE_ERROR, DWORD, 4186656 (32)
        Global_Variables.ADSLOG_MSGTYPE_HINT, DWORD, 4186592 (32)
        Global_Variables.ADSLOG_MSGTYPE_LOG, DWORD, 4186688 (32)
        Global_Variables.ADSLOG_MSGTYPE_MSGBOX, DWORD, 4186720 (32)
        Global_Variables.ADSLOG_MSGTYPE_RESOURCE, DWORD, 4186752 (32)
        Global_Variables.ADSLOG_MSGTYPE_STRING, DWORD, 4186784 (32)
        Global_Variables.ADSLOG_MSGTYPE_WARN, DWORD, 4186624 (32)
        Global_Variables.ADSSTATE_CONFIG, UINT, 4184704 (16)
        Global_Variables.ADSSTATE_ERROR, UINT, 4184640 (16)
        Global_Variables.ADSSTATE_EXCEPTION, UINT, 4184768 (16)
        Global_Variables.ADSSTATE_IDLE, UINT, 4184480 (16)
        Global_Variables.ADSSTATE_INCOMPATIBLE, UINT, 4184752 (16)
        Global_Variables.ADSSTATE_INIT, UINT, 4184512 (16)
        Global_Variables.ADSSTATE_INVALID, UINT, 4184464 (16)
        Global_Variables.ADSSTATE_LOADCFG, UINT, 4184592 (16)
        Global_Variables.ADSSTATE_MAXSTATES, UINT, 4184784 (16)
        Global_Variables.ADSSTATE_POWERFAILURE, UINT, 4184608 (16)
        Global_Variables.ADSSTATE_POWERGOOD, UINT, 4184624 (16)
        Global_Variables.ADSSTATE_RECONFIG, UINT, 4184720 (16)
        Global_Variables.ADSSTATE_RESET, UINT, 4184496 (16)
        Global_Variables.ADSSTATE_RESUME, UINT, 4184688 (16)
        Global_Variables.ADSSTATE_RUN, UINT, 4184544 (16)
        Global_Variables.ADSSTATE_SAVECFG, UINT, 4184576 (16)
        Global_Variables.ADSSTATE_SHUTDOWN, UINT, 4184656 (16)
        Global_Variables.ADSSTATE_START, UINT, 4184528 (16)
        Global_Variables.ADSSTATE_STOP, UINT, 4184560 (16)
        Global_Variables.ADSSTATE_STOPPING, UINT, 4184736 (16)
        Global_Variables.ADSSTATE_SUSPEND, UINT, 4184672 (16)
        Global_Variables.AMSLOGGER_IGR_GENERAL, UDINT, 4252384 (32)
        Global_Variables.AMSLOGGER_IOF_MODE, UDINT, 4252416 (32)
        Global_Variables.AMSPORT_AMSLOGGER, UINT, 4252448 (16)
        Global_Variables.AMSPORT_EVENTLOG, UINT, 4097200 (16)
        Global_Variables.AMSPORT_LOGGER, UINT, 4096432 (16)
        Global_Variables.AMSPORT_R0_CAM, UINT, 4184400 (16)
        Global_Variables.AMSPORT_R0_CAMTOOL, UINT, 4184416 (16)
        Global_Variables.AMSPORT_R0_CNC, UINT, 4184288 (16)
        Global_Variables.AMSPORT_R0_IO, UINT, 4184208 (16)
        Global_Variables.AMSPORT_R0_ISG, UINT, 4184272 (16)
        Global_Variables.AMSPORT_R0_LINE, UINT, 4184304 (16)
        Global_Variables.AMSPORT_R0_NC, UINT, 4184224 (16)
        Global_Variables.AMSPORT_R0_NCSAF, UINT, 4184240 (16)
        Global_Variables.AMSPORT_R0_NCSVB, UINT, 4184256 (16)
        Global_Variables.AMSPORT_R0_PLC, UINT, 4184320 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS1, UINT, 4184336 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS2, UINT, 4184352 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS3, UINT, 4184368 (16)
        Global_Variables.AMSPORT_R0_PLC_RTS4, UINT, 4184384 (16)
        Global_Variables.AMSPORT_R0_RTIME, UINT, 4184192 (16)
        Global_Variables.AMSPORT_R3_SCOPESERVER, UINT, 4184448 (16)
        Global_Variables.AMSPORT_R3_SYSSERV, UINT, 4184432 (16)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_INVALID, BYTE, 4186832 (8)
        Global_Variables.BOOTDATAFLAGS_PERSISTENT_LOADED, BYTE, 4186824 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_INVALID, BYTE, 4097192 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_LOADED, BYTE, 4096376 (8)
        Global_Variables.BOOTDATAFLAGS_RETAIN_REQUESTED, BYTE, 4186816 (8)
        Global_Variables.DATE_AND_TIME_SECPERDAY, DWORD, 4265376 (32)
        Global_Variables.DATE_AND_TIME_SECPERWEEK, DWORD, 4265408 (32)
        Global_Variables.DBG_OUTPUT_FILE, DWORD, 4271680 (32)
        Global_Variables.DBG_OUTPUT_LOG, DWORD, 4271648 (32)
        Global_Variables.DBG_OUTPUT_NONE, DWORD, 4271616 (32)
        Global_Variables.DBG_OUTPUT_VISU, DWORD, 4271712 (32)
        Global_Variables.DEFAULT_ADS_TIMEOUT, TIME, 4187488 (32)
        Global_Variables.DEFAULT_BACKLASHVALUE, LREAL, 634649728 (64)
        Global_Variables.DEFAULT_CSV_FIELD_DOUBLE_QUOTE, BYTE, 4390480 (8)
        Global_Variables.DEFAULT_CSV_FIELD_SEP, BYTE, 4189160 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_CR, BYTE, 4390488 (8)
        Global_Variables.DEFAULT_CSV_RECORD_SEP_LF, BYTE, 4391440 (8)
        Global_Variables.DEFAULT_HOME_POSITION, LREAL, 634649664 (64)
        Global_Variables.EMPTY_ARG_VALUE, T_Arg, 4253056 (128)
        Global_Variables.EMPTY_GUID_REGSTRING, STRING(38), 4393608 (312)
        Global_Variables.EMPTY_GUID_STRING, STRING(36), 4393312 (296)
        Global_Variables.EMPTY_GUID_STRUCT, GUID, 4393184 (128)
        Global_Variables.EMPTY_ROUTE_ENTRY, ST_AmsRouteEntry, 4251136 (1184)
        Global_Variables.eWatchdogConfig, E_WATCHDOG_TIME_CONFIG, 4188128 (16)
        Global_Variables.FLOATREC_EXP_IS_INF, INT, 4252496 (16)
        Global_Variables.FLOATREC_EXP_IS_NAN, INT, 4252480 (16)
        Global_Variables.FLOATREC_MAX_DIGITS, INT, 4252512 (16)
        Global_Variables.FLOATREC_MAX_PRECISION, INT, 4252528 (16)
        Global_Variables.FLOATREC_MIN_PRECISION, INT, 4252544 (16)
        Global_Variables.FMTERR_ARGTYPEINVALID, DWORD, 4252864 (32)
        Global_Variables.FMTERR_ASTERISKPOSITION, DWORD, 4252640 (32)
        Global_Variables.FMTERR_DESTBUFFOVERFLOW, DWORD, 4252960 (32)
        Global_Variables.FMTERR_FLAGPOSITION, DWORD, 4252736 (32)
        Global_Variables.FMTERR_INSUFFICIENTARGS, DWORD, 4252928 (32)
        Global_Variables.FMTERR_INVALIDPOINTERINPUT, DWORD, 4252992 (32)
        Global_Variables.FMTERR_NOERROR, DWORD, 4252576 (32)
        Global_Variables.FMTERR_PERCENTSIGNPOSITION, DWORD, 4252608 (32)
        Global_Variables.FMTERR_PRECISIONDOTPOSITION, DWORD, 4252800 (32)
        Global_Variables.FMTERR_PRECISIONVALUE, DWORD, 4252704 (32)
        Global_Variables.FMTERR_TYPEFIELDVALUE, DWORD, 4252832 (32)
        Global_Variables.FMTERR_UNACCEPTEDPARAMETER, DWORD, 4252896 (32)
        Global_Variables.FMTERR_WIDTHPRECISIONVALPOS, DWORD, 4252768 (32)
        Global_Variables.FMTERR_WIDTHVALUE, DWORD, 4252672 (32)
        Global_Variables.FOPEN_MODEAPPEND, DWORD, 4186944 (32)
        Global_Variables.FOPEN_MODEBINARY, DWORD, 4187008 (32)
        Global_Variables.FOPEN_MODEPLUS, DWORD, 4186976 (32)
        Global_Variables.FOPEN_MODEREAD, DWORD, 4186880 (32)
        Global_Variables.FOPEN_MODETEXT, DWORD, 4187040 (32)
        Global_Variables.FOPEN_MODEWRITE, DWORD, 4186912 (32)
        Global_Variables.FORMAT_DECASC_CODES, BYTE, 4253440 (80)
        Global_Variables.FORMAT_HEXASC_CODES, BYTE, 4253184 (256)
        Global_Variables.FORMAT_MAX_ARGS, INT, 4252464 (16)
        Global_Variables.GLOBAL_DCF77_PULSE_SPLIT, TIME, 4189120 (32)
        Global_Variables.GLOBAL_DCF77_SEQUENCE_CHECK, BOOL, 4189152 (8)
        Global_Variables.GLOBAL_FORMAT_HASH_PREFIX_TYPE, E_HashPrefixTypes, 4189088 (16)
        Global_Variables.GLOBAL_SBCS_TABLE, E_SBCSType, 4189104 (16)
        Global_Variables.HKEY_MAX_BINARY_DATA_SIZE, UDINT, 4252352 (32)
        Global_Variables.IPHELPERAPI_ADAPTERSINFO, UDINT, 4250816 (32)
        Global_Variables.IPHELPERAPI_IPADDRBYHOSTNAME, UDINT, 4250848 (32)
        Global_Variables.MAX_ADAPTER_ADDRESS_LENGTH, UDINT, 4250720 (32)
        Global_Variables.MAX_ADAPTER_DESCRIPTION_LENGTH, UDINT, 4250688 (32)
        Global_Variables.MAX_ADAPTER_NAME_LENGTH, UDINT, 4250656 (32)
        Global_Variables.MAX_AVERAGE_MEASURES, INT, 4188144 (16)
        Global_Variables.MAX_LOCAL_ADAPTERS, UDINT, 4250880 (32)
        Global_Variables.MAX_REMOTE_PCS, INT, 4189168 (16)
        Global_Variables.MAX_ROUTE_ADDR_LEN, BYTE, 4251112 (8)
        Global_Variables.MAX_ROUTE_NAME_LEN, BYTE, 4251104 (8)
        Global_Variables.MAX_ROUTE_TRANSPORT, BYTE, 4251128 (8)
        Global_Variables.MAX_STRING_LENGTH, UDINT, 4187584 (32)
        Global_Variables.MIN_ROUTE_TRANSPORT, BYTE, 4251120 (8)
        Global_Variables.nWatchdogTime, BYTE, 4186856 (8)
        Global_Variables.PI, LREAL, 4187520 (64)
        Global_Variables.ROUTE_FLAG_DYNAMIC, DWORD, 4251040 (32)
        Global_Variables.ROUTE_FLAG_NOOVERRIDE, DWORD, 4251072 (32)
        Global_Variables.ROUTE_FLAG_TEMPORARY, DWORD, 4251008 (32)
        Global_Variables.SYSTEMSERVICE_ADDREMOTE, UDINT, 4250912 (32)
        Global_Variables.SYSTEMSERVICE_CHANGENETID, UDINT, 4186400 (32)
        Global_Variables.SYSTEMSERVICE_CLOSEHANDLE, UDINT, 4185760 (32)
        Global_Variables.SYSTEMSERVICE_CREATEFILE, UDINT, 4185728 (32)
        Global_Variables.SYSTEMSERVICE_DELREMOTE, UDINT, 4250944 (32)
        Global_Variables.SYSTEMSERVICE_ENUMREMOTE, UDINT, 4250976 (32)
        Global_Variables.SYSTEMSERVICE_FCLOSE, UDINT, 4185824 (32)
        Global_Variables.SYSTEMSERVICE_FDELETE, UDINT, 4186144 (32)
        Global_Variables.SYSTEMSERVICE_FEOF, UDINT, 4186112 (32)
        Global_Variables.SYSTEMSERVICE_FFILEFIND, UDINT, 4252320 (32)
        Global_Variables.SYSTEMSERVICE_FGETS, UDINT, 4185984 (32)
        Global_Variables.SYSTEMSERVICE_FOPEN, UDINT, 4185792 (32)
        Global_Variables.SYSTEMSERVICE_FPRINTF, UDINT, 4186080 (32)
        Global_Variables.SYSTEMSERVICE_FPUTS, UDINT, 4186016 (32)
        Global_Variables.SYSTEMSERVICE_FREAD, UDINT, 4185856 (32)
        Global_Variables.SYSTEMSERVICE_FRENAME, UDINT, 4186176 (32)
        Global_Variables.SYSTEMSERVICE_FSCANF, UDINT, 4186048 (32)
        Global_Variables.SYSTEMSERVICE_FSEEK, UDINT, 4185920 (32)
        Global_Variables.SYSTEMSERVICE_FTELL, UDINT, 4185952 (32)
        Global_Variables.SYSTEMSERVICE_FWRITE, UDINT, 4185888 (32)
        Global_Variables.SYSTEMSERVICE_IPHELPERAPI, UDINT, 4250752 (32)
        Global_Variables.SYSTEMSERVICE_IPHOSTNAME, UDINT, 4250784 (32)
        Global_Variables.SYSTEMSERVICE_MKDIR, UDINT, 4186208 (32)
        Global_Variables.SYSTEMSERVICE_OPENCREATE, UDINT, 4185632 (32)
        Global_Variables.SYSTEMSERVICE_OPENREAD, UDINT, 4185664 (32)
        Global_Variables.SYSTEMSERVICE_OPENWRITE, UDINT, 4185696 (32)
        Global_Variables.SYSTEMSERVICE_REG_HKEYLOCALMACHINE, UDINT, 4186272 (32)
        Global_Variables.SYSTEMSERVICE_RMDIR, UDINT, 4186240 (32)
        Global_Variables.SYSTEMSERVICE_SENDEMAIL, UDINT, 4186304 (32)
        Global_Variables.SYSTEMSERVICE_STARTPROCESS, UDINT, 4186368 (32)
        Global_Variables.SYSTEMSERVICE_TIMESERVICES, UDINT, 4186336 (32)
        Global_Variables.SYSTEMSTATEFLAGS_BSOD, BYTE, 4186840 (8)
        Global_Variables.SYSTEMSTATEFLAGS_RTVIOLATION, BYTE, 4186848 (8)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX, T_ULARGE_INTEGER, 4260032 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MAX64, ULINT, 4260352 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN, T_ULARGE_INTEGER, 4259968 (64)
        Global_Variables.SYSTEMTIME_DATE_AND_TIME_MIN64, ULINT, 4260288 (64)
        Global_Variables.SYSTEMTIME_DATEDELTA_OFFSET, DWORD, 4253024 (32)
        Global_Variables.SYSTEMTIME_MAX_MONTHDAYS, WORD, 4258928 (384)
        Global_Variables.SYSTEMTIME_MAX_YEARSDAY, WORD, 4259312 (448)
        Global_Variables.SYSTEMTIME_TICKSPERDAY, T_ULARGE_INTEGER, 4259904 (64)
        Global_Variables.SYSTEMTIME_TICKSPERDAY64, ULINT, 4260224 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC, T_ULARGE_INTEGER, 4259776 (64)
        Global_Variables.SYSTEMTIME_TICKSPERMSEC64, ULINT, 4260096 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC, T_ULARGE_INTEGER, 4259840 (64)
        Global_Variables.SYSTEMTIME_TICKSPERSEC64, ULINT, 4260160 (64)
        Global_Variables.TCEVENT_FMTPRGSIZE, INT, 4187472 (16)
        Global_Variables.TCEVENT_SRCNAMESIZE, INT, 4187456 (16)
        Global_Variables.TCEVENTFLAG_AUTOFMTALL, WORD, 4187360 (16)
        Global_Variables.TCEVENTFLAG_FMTSELF, WORD, 4187296 (16)
        Global_Variables.TCEVENTFLAG_LOG, WORD, 4187312 (16)
        Global_Variables.TCEVENTFLAG_MSGBOX, WORD, 4187328 (16)
        Global_Variables.TCEVENTFLAG_PRIOCLASS, WORD, 4186864 (16)
        Global_Variables.TCEVENTFLAG_SRCID, WORD, 4187344 (16)
        Global_Variables.TCEVENTSTATE_CONFIRMED, WORD, 4187424 (16)
        Global_Variables.TCEVENTSTATE_INVALID, WORD, 4187376 (16)
        Global_Variables.TCEVENTSTATE_RESET, WORD, 4187408 (16)
        Global_Variables.TCEVENTSTATE_RESETCON, WORD, 4187440 (16)
        Global_Variables.TCEVENTSTATE_SIGNALED, WORD, 4187392 (16)
        Global_Variables.TcMcGlobal, _TCMCGLOBAL, 634642560 (7104)
        Global_Variables.TIMESERVICE_ADJUSTTIMETORTC, UDINT, 4186528 (32)
        Global_Variables.TIMESERVICE_DATEANDTIME, UDINT, 4186432 (32)
        Global_Variables.TIMESERVICE_RTCTIMEDIFF, UDINT, 4186496 (32)
        Global_Variables.TIMESERVICE_SYSTEMTIMES, UDINT, 4186464 (32)
        Global_Variables.TIMESERVICE_TIMEZONINFORMATION, UDINT, 4186560 (32)
        Global_Variables.WEST_EUROPE_TZI, ST_TimeZoneInformation, 4260416 (864)

.. raw:: html

   </details>
   <br />


Global_Version
^^^^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Global_Version.stLibVersion_lcls_twincat_motion, ST_LibVersion, 636427968 (288)
        Global_Version.stLibVersion_Tc2_EtherCAT, ST_LibVersion, 4183328 (288)
        Global_Version.stLibVersion_Tc2_IoFunctions, ST_LibVersion, 4394016 (288)
        Global_Version.stLibVersion_Tc2_Math, ST_LibVersion, 634649792 (288)
        Global_Version.stLibVersion_Tc2_MC2, ST_LibVersion, 634642240 (288)
        Global_Version.stLibVersion_Tc2_ModbusSrv, ST_LibVersion, 4394304 (288)
        Global_Version.stLibVersion_Tc2_SerialCom, ST_LibVersion, 4394592 (288)
        Global_Version.stLibVersion_Tc2_Standard, ST_LibVersion, 4183616 (288)
        Global_Version.stLibVersion_Tc2_System, ST_LibVersion, 4183904 (288)
        Global_Version.stLibVersion_Tc2_Utilities, ST_LibVersion, 4188800 (288)
        Global_Version.stLibVersion_Tc3_EventLogger, ST_LibVersion, 4395328 (288)
        Global_Version.stLibVersion_Tc3_JsonXml, ST_LibVersion, 4395776 (288)
        Global_Version.stLibVersion_Tc3_Module, ST_LibVersion, 4188160 (288)
        Global_Version.stLibVersion_TcUnit, ST_LibVersion, 634629888 (288)

.. raw:: html

   </details>
   <br />


GVL
^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL.nHomingError, UDINT, 635107296 (32)
        GVL.nLangId_OnlineMonitoring, DINT, 4395264 (32)


GVL_ErrorSystem
^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_ErrorSystem.cSizeOfErrorData, UINT, 636428256 (16)


GVL_INTERNAL
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_INTERNAL.UNINITIALIZED_CLASS_GUID, GUID, 4395616 (128)


GVL_Logger
^^^^^^^^^^

.. raw:: html

   <details>
       <summary>14 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Logger.bTrickleTripped, BOOL, 4096088 (8)
        GVL_Logger.cLogHost, STRING(15), 4096192 (128)
        GVL_Logger.fbRootLogger, FB_LogMessage, 4097280 (86016)
        GVL_Logger.iLogPort, UINT, 4096112 (16)
        GVL_Logger.nGlobAccEvents, UDINT, 4097248 (32)
        GVL_Logger.nLocalTrickleTripThreshold, TIME, 4096448 (32)
        GVL_Logger.nLocalTripThreshold, TIME, 4096384 (32)
        GVL_Logger.nMinTimeViolationAcceptable, INT, 4096416 (16)
        GVL_Logger.nTrickleThreshold, UDINT, 4183296 (32)
        GVL_Logger.nTrickleTripTime, TIME, 4096480 (32)
        GVL_Logger.nTripResetPeriod, TIME, 4096512 (32)
        GVL_Logger.sIpTidbit, STRING(6), 4096320 (56)
        GVL_Logger.sPlcHostname, STRING(80), 4096544 (648)
        GVL_Logger.TCPADS_MAXUDP_BUFFSIZE, UDINT, 4097216 (32)

.. raw:: html

   </details>
   <br />


GVL_Param_TcUnit
^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_Param_TcUnit.AdsLogMessageFifoRingBufferSize, UINT, 4396112 (16)
        GVL_Param_TcUnit.LogExtendedResults, BOOL, 4393928 (8)
        GVL_Param_TcUnit.MaxNumberOfAssertsForEachTestSuite, UINT, 4396080 (16)
        GVL_Param_TcUnit.MaxNumberOfTestsForEachTestSuite, UINT, 4396064 (16)
        GVL_Param_TcUnit.MaxNumberOfTestSuites, UINT, 4395056 (16)
        GVL_Param_TcUnit.TimeBetweenTestSuitesExecution, TIME, 4398208 (32)
        GVL_Param_TcUnit.xUnitBufferSize, UDINT, 4396128 (32)
        GVL_Param_TcUnit.xUnitEnablePublish, BOOL, 4396096 (8)
        GVL_Param_TcUnit.xUnitFilePath, STRING(255), 4396160 (2048)


GVL_TcUnit
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        GVL_TcUnit.AdsMessageQueue, FB_AdsLogStringMessageFifoQueue, 626308736 (8321152)
        GVL_TcUnit.CurrentlyRunningOrderedTestInTestSuite, UINT, 626292736 (16000)
        GVL_TcUnit.CurrentTestIsFinished, BOOL, 4398240 (8)
        GVL_TcUnit.CurrentTestNameBeingCalled, STRING(255), 626226688 (2048)
        GVL_TcUnit.CurrentTestSuiteBeingCalled, POINTER TO FB_TestSuite, 626226624 (64)
        GVL_TcUnit.IgnoreCurrentTest, BOOL, 4398248 (8)
        GVL_TcUnit.NumberOfInitializedTestSuites, UINT, 4398256 (16)
        GVL_TcUnit.TcUnitRunner, FB_TcUnitRunner, 4398272 (621828352)
        GVL_TcUnit.TestSuiteAddresses, POINTER TO FB_TestSuite, 626228736 (64000)
        GVL_TcUnit.TestSuiteIsRegistered, BOOL, 4396104 (8)


Interactive
^^^^^^^^^^^

.. raw:: html

   <details>
       <summary>28 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        Interactive.bGoHCF, BOOL, 635107264 (8)
        Interactive.bGoIn, BOOL, 634650096 (8)
        Interactive.bGoOut, BOOL, 634650080 (8)
        Interactive.bHCF, BOOL, 634650104 (8)
        Interactive.bIn, BOOL, 634650088 (8)
        Interactive.bInit, BOOL, 634642528 (8)
        Interactive.bOut, BOOL, 634642536 (8)
        Interactive.fbGoBad, FB_PositionStateMove, 635104320 (2944)
        Interactive.fbGoIn, FB_PositionStateMove, 635097728 (2944)
        Interactive.fbGoOut, FB_PositionStateMove, 635091136 (2944)
        Interactive.fbMotionStageSim, FB_MotionStageSim, 634760192 (327296)
        Interactive.fbMotionStageSim.fbMotionStage.fbDriveVirtual.MasterAxis.NcToPlc, NCTOPLC_AXIS_REF, 634763008 (2048)
        Interactive.fbMotionStageSim.fbMotionStage.fbDriveVirtual.MasterAxis.PlcToNc, PLCTONC_AXIS_REF, 634761984 (1024)
        Interactive.M1, DUT_MotionStage, 634734912 (25280)
        Interactive.M1.Axis.NcToPlc, NCTOPLC_AXIS_REF, 634736000 (2048)
        Interactive.M1.Axis.PlcToNc, PLCTONC_AXIS_REF, 634734976 (1024)
        Interactive.M1.bBrakeRelease, BOOL, 634744024 (8)
        Interactive.M1.bHardwareEnable, BOOL, 634744032 (8)
        Interactive.M1.bHome, BOOL, 634744016 (8)
        Interactive.M1.bLimitBackwardEnable, BOOL, 634744008 (8)
        Interactive.M1.bLimitForwardEnable, BOOL, 634744000 (8)
        Interactive.M1.nRawEncoderINT, INT, 634744144 (16)
        Interactive.M1.nRawEncoderUINT, UINT, 634744128 (16)
        Interactive.M1.nRawEncoderULINT, ULINT, 634744064 (64)
        Interactive.nCounter, UINT, 634642544 (16)
        Interactive.stIn, DUT_PositionState, 635094080 (3648)
        Interactive.stOut, DUT_PositionState, 635087488 (3648)
        Interactive.stUnsafe, DUT_PositionState, 635100672 (3648)

.. raw:: html

   </details>
   <br />


LCLS_General
^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        LCLS_General.DefaultGlobals.stSys.I_EcatMaster1, AMSNETID, 4096040 (48)


MOTION_GVL
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        MOTION_GVL.fbPmpsFileReader, FB_JsonFileToJsonDoc, 635462848 (935360)
        MOTION_GVL.fbStandardPMPSDB, FB_Standard_PMPSDB, 636398208 (29760)


ParameterList
^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        ParameterList.cSourceNameSize, UDINT, 4395296 (32)


PMPS_GVL
^^^^^^^^

.. raw:: html

   <details>
       <summary>24 Symbols</summary>

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_GVL.AccumulatedFF, UDINT, 3072032 (32)
        PMPS_GVL.AUX_ATTENUATORS, UINT, 634635008 (16)
        PMPS_GVL.BP_jsonDoc, SJsonValue, 3072064 (64)
        PMPS_GVL.cnMaxStateArrayLen, INT, 634638624 (16)
        PMPS_GVL.cst0RateBeam, ST_BeamParams, 634636864 (1760)
        PMPS_GVL.cstFullBeam, ST_BeamParams, 634635104 (1760)
        PMPS_GVL.DUMMY_AUX_ATT_ARRAY, ST_PMPS_Attenuator, 634638656 (1024)
        PMPS_GVL.EXCLUDED_ASSERTION_ID, UDINT, 634634720 (32)
        PMPS_GVL.FAST_TEST_VELOCITY, LREAL, 634634880 (64)
        PMPS_GVL.g_areVBoundaries, REAL, 634633696 (1024)
        PMPS_GVL.g_areVBoundariesK, REAL, 634640768 (1024)
        PMPS_GVL.g_areVBoundariesL, REAL, 634639744 (1024)
        PMPS_GVL.g_cBoundaries, INT, 634639680 (16)
        PMPS_GVL.MAX_APERTURES, UINT, 634638640 (16)
        PMPS_GVL.MAX_DEVICE_STATES, UDINT, 634634944 (32)
        PMPS_GVL.MAX_VETO_DEVICES, UINT, 634635024 (16)
        PMPS_GVL.PERange, PE_Ranges, 634634752 (64)
        PMPS_GVL.reVHyst, REAL, 634639712 (32)
        PMPS_GVL.stAttenuators, ST_PMPS_Attenuator, 634635040 (64)
        PMPS_GVL.stCurrentBeamParameters, ST_BeamParams, 634631936 (1760)
        PMPS_GVL.stRequestedBeamParameters, ST_BeamParams, 634630176 (1760)
        PMPS_GVL.SuccessfulPreemption, UDINT, 3072000 (32)
        PMPS_GVL.TRANS_SCALING_FACTOR, REAL, 634634976 (32)
        PMPS_GVL.VISIBLE_TEST_VELOCITY, LREAL, 634634816 (64)

.. raw:: html

   </details>
   <br />


PMPS_PARAM
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_PARAM.MAX_ASSERTIONS, UDINT, 634641792 (32)
        PMPS_PARAM.MAX_FAST_FAULTS, UINT, 634639696 (16)
        PMPS_PARAM.TRANS_MARGIN, REAL, 634641824 (32)


PMPS_TOOLS
^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        PMPS_TOOLS.fbJson, FB_JsonSaxWriter, 634641856 (384)


TC_EVENTS
^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TC_EVENTS.LCLSGeneralEventClass, LCLSGeneralEventClass, 636479168 (960)


TwinCAT_SystemInfoVarList
^^^^^^^^^^^^^^^^^^^^^^^^^

.. csv-table::
    :header: Symbol, Type, Offset/Size
    :align: center

        TwinCAT_SystemInfoVarList.__PlcTask, _Implicit_Task_Info, 636431680 (896)
        TwinCAT_SystemInfoVarList._AppInfo, PlcAppSystemInfo, 636428544 (2048)
        TwinCAT_SystemInfoVarList._TaskInfo, PlcTaskSystemInfo, 636430592 (1024)
        TwinCAT_SystemInfoVarList._TaskOid_PlcTask, OTCID, 636431648 (32)
        TwinCAT_SystemInfoVarList._TaskPouOid_PlcTask, OTCID, 636431616 (32)


